[package]
name = "echor"
version = "0.1.0"
edition = "2021"
description = "echo utility built with Rust"
authors = ["Eder Andrés Ávila Niño <email@email.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.0", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "~2.0"
predicates = "~2.1"
